Document nr10 Cypress

--- a/src/components/WeatherCard.css
+++ b/src/components/WeatherCard.css
@@ -19,3 +19,12 @@
         url('../assets/cloud.jpg');
     background-size: cover;
 }
+
+.temperature {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.weather-category {
+    font-size: 1.5rem;
+}
